test(workflow): add unit tests for mpps_hl7_workflow
Add comprehensive test suite covering:
- Configuration validation (default values, empty config, routing rules)
- Builder fluent API (basic build, full configuration, routing rules)
- Destination criteria enum to string conversion
- Workflow lifecycle (start/stop, double start prevention)
- Destination selection rules (by modality, station, pattern priority)
- Correlation ID generation (UUID v4 format validation)
- Trace ID generation (OpenTelemetry format validation)
- Error codes and error-to-string conversion
- Delivery method enum to string conversion
- Workflow result types (success and error states)
- Completion callback registration
- Statistics initialization and reset

28 tests passing across 5 test suites.

Related to #173

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -372,6 +372,9 @@ add_bridge_test(mwl_client_test "unit;pacs_adapter;phase1")
 # MPPS Handler Tests (Phase 2 - Issue #23)
 add_bridge_test(mpps_handler_test "unit;pacs_adapter;mpps;phase2")
 
+# MPPS to HL7 Workflow Tests (Issue #173)
+add_gtest_test(mpps_hl7_workflow_test "unit;workflow;mpps;hl7;phase2")
+
 # =============================================================================
 # Ecosystem Integration Test (Issue #4 - Dependency Setup Verification)
 # =============================================================================
@@ -677,6 +680,7 @@ message(STATUS "  - benchmark_suite_test (Issue #163)")
 message(STATUS "  - memory_safety_test (Issue #163)")
 message(STATUS "  - mwl_client_test")
 message(STATUS "  - mpps_handler_test")
+message(STATUS "  - mpps_hl7_workflow_test (Issue #173)")
 message(STATUS "  - ecosystem_integration_test")
 message(STATUS "")
 message(STATUS "Phase 2 Integration Tests:")
