feat(workflow): wire MPPS → HL7 status updates → outbound delivery (#179)
* feat(workflow): add mpps_hl7_workflow coordinator

Implement workflow orchestration component that wires together:
- mpps_handler callback for receiving MPPS events
- dicom_hl7_mapper for MPPS to HL7 ORM^O01 conversion
- outbound_router for direct MLLP delivery
- queue_manager for reliable fallback delivery

Features:
- Destination selection based on configurable routing rules
- Support for modality-based, station-based, and pattern-based routing
- Correlation ID and trace ID generation for tracking
- Automatic queue fallback on delivery failure
- Async processing with configurable worker threads
- Statistics collection for monitoring
- Fluent API for configuration building

Closes #173

* test(workflow): add unit tests for mpps_hl7_workflow

Add comprehensive test suite covering:
- Configuration validation (default values, empty config, routing rules)
- Builder fluent API (basic build, full configuration, routing rules)
- Destination criteria enum to string conversion
- Workflow lifecycle (start/stop, double start prevention)
- Destination selection rules (by modality, station, pattern priority)
- Correlation ID generation (UUID v4 format validation)
- Trace ID generation (OpenTelemetry format validation)
- Error codes and error-to-string conversion
- Delivery method enum to string conversion
- Workflow result types (success and error states)
- Completion callback registration
- Statistics initialization and reset

28 tests passing across 5 test suites.

Related to #173

* docs: add mpps_hl7_workflow module documentation

Update documentation for Issue #173:

- modules.md: Add Workflow Modules section with mpps_hl7_workflow
  documentation including API reference, usage examples, and
  configuration options
- error-codes.md: Add workflow error codes (PACS-900 to PACS-909)
  with descriptions and resolution steps
- message-flows.md: Update MPPS message flow diagrams to show
  workflow orches

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -372,6 +372,14 @@ add_bridge_test(mwl_client_test "unit;pacs_adapter;phase1")
 # MPPS Handler Tests (Phase 2 - Issue #23)
 add_bridge_test(mpps_handler_test "unit;pacs_adapter;mpps;phase2")
 
+# MPPS to HL7 Workflow Tests (Issue #173)
+# Requires SQLite due to queue_manager dependency
+if(PACS_BRIDGE_HAS_SQLITE)
+    add_gtest_test(mpps_hl7_workflow_test "unit;workflow;mpps;hl7;phase2")
+else()
+    message(STATUS "Skipping mpps_hl7_workflow_test: SQLite not available (required for queue_manager)")
+endif()
+
 # =============================================================================
 # Ecosystem Integration Test (Issue #4 - Dependency Setup Verification)
 # =============================================================================
@@ -677,6 +685,9 @@ message(STATUS "  - benchmark_suite_test (Issue #163)")
 message(STATUS "  - memory_safety_test (Issue #163)")
 message(STATUS "  - mwl_client_test")
 message(STATUS "  - mpps_handler_test")
+if(PACS_BRIDGE_HAS_SQLITE)
+    message(STATUS "  - mpps_hl7_workflow_test (Issue #173)")
+endif()
 message(STATUS "  - ecosystem_integration_test")
 message(STATUS "")
 message(STATUS "Phase 2 Integration Tests:")
