feat(router): add reliable_outbound_sender for guaranteed delivery
Implement reliable_outbound_sender that integrates queue_manager with
outbound_router to provide guaranteed message delivery semantics.

Key features:
- SQLite-backed persistent queue for durability
- Automatic retry with exponential backoff
- Dead letter queue for failed messages
- Crash recovery support
- Health-aware destination selection with failover

This addresses Issue #174 requirement to integrate queue_manager
with outbound_router for reliable outbound message delivery.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,9 +166,11 @@ list(APPEND PACS_BRIDGE_HEADERS
 if(PACS_BRIDGE_HAS_SQLITE)
     list(APPEND PACS_BRIDGE_SOURCES
         src/router/queue_manager.cpp
+        src/router/reliable_outbound_sender.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
         include/pacs/bridge/router/queue_manager.h
+        include/pacs/bridge/router/reliable_outbound_sender.h
     )
 endif()
 
