test(router): add reliable_outbound_sender unit tests
Add comprehensive unit tests for reliable_outbound_sender covering:
- Error code validation
- Configuration and validation
- Enqueue request validation
- Config builder fluent API
- Lifecycle management (start/stop)
- Message enqueueing
- Statistics tracking
- Destination management
- Persistence and crash recovery
- Dead letter queue operations
- Callback registration
- Component access

Tests verify Issue #174 requirements for queue_manager and
outbound_router integration with reliable delivery guarantees.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -259,8 +259,11 @@ if(BRIDGE_BUILD_HL7)
     # Queue Manager Tests (Issue #27) - GTest framework (requires SQLite)
     if(PACS_BRIDGE_HAS_SQLITE)
         add_gtest_test(queue_manager_test "unit;router;queue;phase2")
+        # Reliable Outbound Sender Tests (Issue #174) - GTest framework (requires SQLite)
+        add_gtest_test(reliable_outbound_sender_test "unit;router;reliable;phase2")
     else()
         message(STATUS "Skipping queue_manager_test: SQLite not available")
+        message(STATUS "Skipping reliable_outbound_sender_test: SQLite not available")
     endif()
 
     # Patient Cache Tests - custom framework
@@ -660,6 +663,7 @@ if(BRIDGE_BUILD_HL7)
     message(STATUS "  - outbound_router_test")
     if(PACS_BRIDGE_HAS_SQLITE)
         message(STATUS "  - queue_manager_test")
+        message(STATUS "  - reliable_outbound_sender_test (Issue #174)")
     endif()
     message(STATUS "  - cache_test")
 endif()
