feat(bridge): add bridge_server orchestration for Phase 2 workflow
Implement the main bridge_server class that coordinates all gateway
components for the Phase 2 MPPS-to-HL7 workflow:

- Add bridge_server.h header with public API matching SDS_INTERFACES.md
- Add bridge_server.cpp implementation with PIMPL pattern
- Wire MPPS handler, workflow processor, and reliable outbound sender
- Support configuration via bridge_config or YAML/JSON file
- Implement graceful shutdown with signal handling (SIGINT/SIGTERM)
- Add health monitoring and statistics aggregation
- Add CLI executable target (pacs_bridge_cli)

Components orchestrated:
- MPPS handler for pacs_system event ingestion (#172)
- MPPS-HL7 workflow for message mapping (#173)
- Reliable outbound sender with queue persistence (#174)

Resolves #175

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -312,6 +312,18 @@ if(PACS_BRIDGE_HAS_SQLITE)
     )
 endif()
 
+# Bridge Server Orchestration (Phase 2 entrypoint)
+# See: https://github.com/kcenon/pacs_bridge/issues/175
+# Requires SQLite for reliable message delivery
+if(PACS_BRIDGE_HAS_SQLITE)
+    list(APPEND PACS_BRIDGE_SOURCES
+        src/bridge_server.cpp
+    )
+    list(APPEND PACS_BRIDGE_HEADERS
+        include/pacs/bridge/bridge_server.h
+    )
+endif()
+
 # Messaging Patterns (messaging_system Integration)
 # See: https://github.com/kcenon/pacs_bridge/issues/146
 list(APPEND PACS_BRIDGE_SOURCES
