feat(tests): add Phase 2 E2E tests for MPPS->HL7->MLLP workflow
Add comprehensive end-to-end integration tests for Issue #176:

Workflow 1: MPPS -> ORM status update -> MLLP delivery
- IN PROGRESS -> ORC-5=IP validation
- COMPLETED -> ORC-5=CM validation
- DISCONTINUED -> ORC-1=DC, ORC-5=CA validation
- Complete lifecycle test (N-CREATE -> N-SET COMPLETED)

Workflow 2: Reliable delivery + recovery
- Queue messages when RIS unavailable
- Deliver queued messages when RIS becomes available
- Recovery after simulated system restart
- Failover to backup RIS

Implementation includes:
- hl7_validator class for detailed HL7 field validation
- validating_ris_server for enhanced message inspection
- High volume processing test (20 messages)
- All required HL7 segments validation (MSH, PID, ORC, OBR)

Related: #176, #170

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -481,6 +481,9 @@ add_integration_test(pacs_worklist_test "integration;pacs;worklist;phase2")
 # End-to-End Scenario Tests (Issue #161) - complete workflow scenarios
 add_integration_test(e2e_scenario_test "integration;e2e;scenario;phase2" 600)
 
+# Phase 2 E2E Tests (Issue #176) - MPPS→HL7→MLLP + queue recovery
+add_integration_test(phase2_e2e_test "integration;e2e;phase2;mpps;mllp;recovery" 600)
+
 # Monitoring Integration Tests (Issue #90)
 add_integration_test(monitoring_integration_test "integration;monitoring;metrics;phase4" 180)
 
@@ -709,6 +712,7 @@ message(STATUS "  - stress_test")
 message(STATUS "  - mllp_connection_test (Issue #161)")
 message(STATUS "  - pacs_worklist_test (Issue #161)")
 message(STATUS "  - e2e_scenario_test (Issue #161)")
+message(STATUS "  - phase2_e2e_test (Issue #176)")
 message(STATUS "")
 message(STATUS "Phase 4 Integration Tests:")
 message(STATUS "  - monitoring_integration_test")
