feat(tests): add pacs_system integration test coverage
Add comprehensive integration tests for pacs_bridge <-> pacs_system:

Test Infrastructure (#191):
- pacs_system_test_base.h: Shared fixtures and test utilities
- mwl_test_data_generator: MWL test item factory
- mpps_test_data_generator: MPPS dataset factory
- In-memory SQLite support for fast test execution

MWL Database Tests (#192):
- Add/query/update/cancel operations with real database
- Date-based cleanup operations
- Bulk operations and statistics tracking
- Connection lifecycle tests

MPPS Persistence Tests (#193):
- N-CREATE persists MPPS record with IN PROGRESS status
- N-SET updates status (COMPLETED/DISCONTINUED)
- Query by SOP UID, station, status
- State transition validation
- Persistence statistics tracking

E2E Workflow Tests (#194):
- Complete MWL creation from order data
- MPPS workflow: IN PROGRESS -> COMPLETED/DISCONTINUED
- MWL + MPPS correlation by accession number
- Concurrent procedures on multiple stations
- High volume workflow performance test

Build Configuration:
- Add mwl_database_test, mpps_persistence_test, pacs_system_e2e_test
- Configure test timeouts and labels

Documentation:
- Update contributing.md with pacs_system integration tests section

Closes #188
Related: #191, #192, #193, #194

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -488,6 +488,23 @@ add_integration_test(phase2_e2e_test "integration;e2e;phase2;mpps;mllp;recovery"
 add_integration_test(monitoring_integration_test "integration;monitoring;metrics;phase4" 180)
 
 # =============================================================================
+# pacs_system Integration Tests (Issue #188)
+# Tests pacs_bridge <-> pacs_system database operations
+# =============================================================================
+
+# MWL Database Integration Tests (Issue #192)
+# Tests MWL add/query/update/cancel operations with real database
+add_integration_test(mwl_database_test "integration;pacs_system;mwl;phase2" 300)
+
+# MPPS Persistence Integration Tests (Issue #193)
+# Tests MPPS record persistence, status updates, and recovery
+add_integration_test(mpps_persistence_test "integration;pacs_system;mpps;persistence;phase2" 300)
+
+# pacs_system E2E Workflow Tests (Issue #194)
+# Tests complete workflow: HL7 -> MWL -> MPPS -> HL7
+add_integration_test(pacs_system_e2e_test "integration;pacs_system;e2e;workflow;phase2" 600)
+
+# =============================================================================
 # Messaging Pattern Tests (Issue #146, #142)
 # =============================================================================
 
@@ -713,6 +730,11 @@ message(STATUS "  - mllp_connection_test (Issue #161)")
 message(STATUS "  - pacs_worklist_test (Issue #161)")
 message(STATUS "  - e2e_scenario_test (Issue #161)")
 message(STATUS "  - phase2_e2e_test (Issue #176)")
+message(STATUS "")
+message(STATUS "pacs_system Integration Tests (Issue #188):")
+message(STATUS "  - mwl_database_test (Issue #192)")
+message(STATUS "  - mpps_persistence_test (Issue #193)")
+message(STATUS "  - pacs_system_e2e_test (Issue #194)")
 message(STATUS "")
 message(STATUS "Phase 4 Integration Tests:")
 message(STATUS "  - monitoring_integration_test")
