feat(integration): add IExecutor interface adapter for bridge server
Add executor adapter infrastructure to integrate common_system's IExecutor
interface into pacs_bridge for standardized task execution.

Changes:
- Add executor_adapter.h with lambda_job, thread_pool_executor_adapter,
  and simple_executor implementations
- Add executor_adapter.cpp with full implementation
- Update bridge_server to accept optional IExecutor in constructors
- Add conditional compilation for standalone vs full build modes
- Update CMakeLists.txt to include new integration module

The IExecutor integration enables:
- Consistent executor behavior across ecosystem
- Better resource management and thread pooling
- Simplified testing with executor mocks
- ABI compatibility with foundation systems

Resolves Phase 1 of #198

Co-Authored-By: Raphael Shin <raphael.shin@email.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,25 @@ if(BRIDGE_BUILD_HL7)
     )
 endif()
 
+# Integration Module - IExecutor adapter
+# See: https://github.com/kcenon/pacs_bridge/issues/198
+# Only available in non-standalone build (requires common_system)
+if(NOT BRIDGE_STANDALONE_BUILD)
+    list(APPEND PACS_BRIDGE_SOURCES
+        src/integration/executor_adapter.cpp
+    )
+    list(APPEND PACS_BRIDGE_HEADERS
+        include/pacs/bridge/integration/executor_adapter.h
+    )
+endif()
+
+# Other integration adapters (always available)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/integration/logger_adapter.h
+    include/pacs/bridge/integration/network_adapter.h
+    include/pacs/bridge/integration/thread_adapter.h
+)
+
 # MLLP Transport
 list(APPEND PACS_BRIDGE_SOURCES
     src/mllp/mllp_server.cpp
