feat(module): add HL7 and MLLP module partitions
- Create pacs_bridge-hl7.cppm with HL7 v2.x message handling exports
  - Core types: hl7_message, hl7_segment, hl7_field, hl7_component
  - Parser: hl7_parser, hl7_streaming_parser
  - Builder: hl7_builder, adt_builder, orm_builder, oru_builder
  - Validator: hl7_validator
  - Handlers: adt_handler, orm_handler, oru_generator, siu_handler
- Create pacs_bridge-mllp.cppm with MLLP transport exports
  - mllp_server, mllp_client, mllp_connection_pool
- Enable module files in CMakeLists.txt

Closes #253

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -607,8 +607,8 @@ if(BRIDGE_BUILD_MODULES)
             # Primary module interface
             src/modules/pacs_bridge.cppm
             # Protocol partitions (Phase 2)
-            # src/modules/pacs_bridge-hl7.cppm
-            # src/modules/pacs_bridge-mllp.cppm
+            src/modules/pacs_bridge-hl7.cppm
+            src/modules/pacs_bridge-mllp.cppm
             # FHIR partition (Phase 3)
             # src/modules/pacs_bridge-fhir.cppm
             # Integration partitions (Phase 4)
