feat(module): add FHIR R4 module partition
- Create pacs_bridge-fhir.cppm with FHIR R4 resource exports
  - Base: fhir_resource, operation_outcome
  - Server: fhir_server, resource_handler, handler_registry
  - Patient: patient_resource, patient_resource_handler
  - ServiceRequest: service_request_resource, mwl_storage
  - ImagingStudy: imaging_study_resource, study_storage
  - Subscription: subscription_resource, subscription_manager
- Enable module file in CMakeLists.txt

Closes #254

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -609,8 +609,8 @@ if(BRIDGE_BUILD_MODULES)
             # Protocol partitions (Phase 2)
             src/modules/pacs_bridge-hl7.cppm
             src/modules/pacs_bridge-mllp.cppm
-            # FHIR partition (Phase 3)
-            # src/modules/pacs_bridge-fhir.cppm
+            # FHIR partition (Phase 3) - conditional compilation
+            src/modules/pacs_bridge-fhir.cppm
             # Integration partitions (Phase 4)
             # src/modules/pacs_bridge-emr.cppm
             # src/modules/pacs_bridge-mapping.cppm
