feat(module): add EMR and Mapping module partitions
- Create pacs_bridge-emr.cppm with EMR integration exports
  - HTTP client: http_client_adapter, callback_http_client
  - FHIR client: fhir_client, bundle_builder
  - Patient: emr_patient_lookup, patient_matcher
  - Results: diagnostic_report_builder, emr_result_poster, result_tracker
  - Context: encounter_context_provider
  - Adapter: emr_adapter, generic_fhir_adapter
- Create pacs_bridge-mapping.cppm with data mapper exports
  - hl7_dicom_mapper, patient_id_mapper
  - dicom_hl7_mapper
  - fhir_dicom_mapper (conditional)
- Enable module files in CMakeLists.txt

Closes #255

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -612,8 +612,8 @@ if(BRIDGE_BUILD_MODULES)
             # FHIR partition (Phase 3) - conditional compilation
             src/modules/pacs_bridge-fhir.cppm
             # Integration partitions (Phase 4)
-            # src/modules/pacs_bridge-emr.cppm
-            # src/modules/pacs_bridge-mapping.cppm
+            src/modules/pacs_bridge-emr.cppm
+            src/modules/pacs_bridge-mapping.cppm
             # Server partitions (Phase 5)
             # src/modules/pacs_bridge-router.cppm
             # src/modules/pacs_bridge-server.cppm
