feat(module): add Router and Server module partitions
- Create pacs_bridge-router.cppm with routing exports
  - message_router, route_builder
  - outbound_router, destination_builder
  - queue_manager, queue_config_builder
  - reliable_outbound_sender, reliable_sender_config_builder
- Create pacs_bridge-server.cppm with server core exports
  - bridge_server orchestration
  - config: config_loader, config_manager, admin_server
  - monitoring: health_checker, health_server, bridge_metrics_collector
- Enable module files in CMakeLists.txt

Closes #256

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -615,8 +615,8 @@ if(BRIDGE_BUILD_MODULES)
             src/modules/pacs_bridge-emr.cppm
             src/modules/pacs_bridge-mapping.cppm
             # Server partitions (Phase 5)
-            # src/modules/pacs_bridge-router.cppm
-            # src/modules/pacs_bridge-server.cppm
+            src/modules/pacs_bridge-router.cppm
+            src/modules/pacs_bridge-server.cppm
         )
 
         target_sources(pacs_bridge_modules
