test: add comprehensive CRTP handler infrastructure tests
Add crtp_handler_test.cpp with 37 tests covering:
- CRTP concept validation for ADT, ORM, SIU handlers
- Static dispatch via HL7HandlerBase
- Type erasure with HL7HandlerWrapper
- HL7HandlerRegistry functionality
- Handler and registry error codes
- Performance benchmarks (142ns/call for can_handle)
- Thread safety for concurrent processing

Closes #262

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -223,6 +223,9 @@ if(BRIDGE_BUILD_HL7)
     # SIU Message Handler Tests (Issue #26) - GTest framework
     add_gtest_test(siu_handler_test "unit;hl7;siu;phase2")
 
+    # CRTP Handler Infrastructure Tests (Issue #262) - GTest framework
+    add_gtest_test(crtp_handler_test "unit;hl7;crtp;phase2")
+
     # MDM Message Handler Tests (Issue #145) - Medical Document Management
     add_gtest_test(mdm_handler_test "unit;hl7;mdm;phase2")
 
