feat(integration): implement thread_adapter module
Implement thread_adapter to bridge pacs_bridge with thread_system's
thread_pool for async processing.

- Add thread_pool_adapter wrapping thread_system's thread_pool
- Add simple_thread_adapter as standalone fallback
- Implement submit() template method with priority support
- Add comprehensive unit tests for thread adapter
- Update CMakeLists.txt to include thread_adapter in build

Part of integration module completion (Issue #266)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,7 @@ if(NOT BRIDGE_STANDALONE_BUILD)
         src/integration/executor_adapter.cpp
         src/integration/logger_adapter.cpp
         src/integration/network_adapter.cpp
+        src/integration/thread_adapter.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
         include/pacs/bridge/integration/executor_adapter.h
