--- a/src/integration/CMakeLists.txt
+++ b/src/integration/CMakeLists.txt
@@ -2,13 +2,12 @@
 # Provides adapters for common_system libraries (network, thread, logger).
 #
 # See: docs/SDS_COMPONENTS.md - Section 8: Integration Module
-
-set(INTEGRATION_SOURCES
-    # Placeholder - implementation pending
-    # network_adapter.cpp
-    # thread_adapter.cpp
-    # logger_adapter.cpp
-)
-
-# Library will be added when implementation is complete
-# add_library(pacs_bridge_integration STATIC ${INTEGRATION_SOURCES})
+#
+# NOTE: Integration sources are built as part of the main pacs_bridge library
+# in the root CMakeLists.txt. This file exists for module documentation only.
+#
+# Sources:
+#   - executor_adapter.cpp  (Issue #198)
+#   - logger_adapter.cpp    (Issue #267)
+#   - network_adapter.cpp   (Issue #270)
+#   - thread_adapter.cpp    (Issue #266)
