feat(integration): implement database_adapter module (#274)
Add database adapter interface for SQLite database access with
connection pooling. This provides a standardized database abstraction
layer for pacs_bridge components.

Key features:
- Abstract database_adapter interface with factory functions
- SQLite-based implementation for standalone mode
- Connection pooling with configurable pool size
- Prepared statement support with parameter binding
- Transaction management with RAII guards
- Thread-safe concurrent access

The adapter follows the established pattern of other integration
adapters (executor, network, logger) and enables future migration
of queue_manager to use this abstraction.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,6 +172,13 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/integration/logger_adapter.h
     include/pacs/bridge/integration/network_adapter.h
     include/pacs/bridge/integration/thread_adapter.h
+    include/pacs/bridge/integration/database_adapter.h
+)
+
+# Database adapter - always available (uses SQLite)
+# See: https://github.com/kcenon/pacs_bridge/issues/274
+list(APPEND PACS_BRIDGE_SOURCES
+    src/integration/database_adapter.cpp
 )
 
 # MLLP Transport
