fix(build): use MSVC compiler for Windows CI and conditionally build database_adapter
- Explicitly set CMAKE_C_COMPILER and CMAKE_CXX_COMPILER to cl (MSVC)
  in Windows CI to ensure compatibility with vcpkg-installed packages
- Make database_adapter.cpp conditional on PACS_BRIDGE_HAS_SQLITE
  to prevent build failures when SQLite is not available

The Windows CI was failing because Ninja was selecting MinGW's c++.exe
from PATH instead of MSVC's cl.exe, causing incompatibility with
vcpkg packages built for MSVC.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,6 +217,7 @@ jobs:
         $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
 
         # Note: BRIDGE_STANDALONE_BUILD=ON (default) - see Issue #142
+        # Use cl.exe (MSVC) explicitly to ensure compatibility with vcpkg packages
         cmake -B build `
           -G Ninja `
           -DCMAKE_BUILD_TYPE=Release `
@@ -225,6 +226,8 @@ jobs:
           -DBRIDGE_BUILD_EXAMPLES=OFF `
           -DBRIDGE_BUILD_HL7=ON `
           -DBRIDGE_BUILD_FHIR=OFF `
+          -DCMAKE_C_COMPILER=cl `
+          -DCMAKE_CXX_COMPILER=cl `
           -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" `
           -DVCPKG_MANIFEST_MODE=OFF
 
