--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -213,11 +213,9 @@ jobs:
       working-directory: pacs_bridge
       shell: pwsh
       run: |
-        # Refresh PATH to include Ninja from chocolatey
-        $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
-
         # Note: BRIDGE_STANDALONE_BUILD=ON (default) - see Issue #142
-        # Use cl.exe (MSVC) explicitly to ensure compatibility with vcpkg packages
+        # Do NOT refresh PATH - it would overwrite MSVC environment set by ilammy/msvc-dev-cmd
+        # cl.exe is already in PATH from the Setup MSVC step
         cmake -B build `
           -G Ninja `
           -DCMAKE_BUILD_TYPE=Release `
@@ -226,8 +224,6 @@ jobs:
           -DBRIDGE_BUILD_EXAMPLES=OFF `
           -DBRIDGE_BUILD_HL7=ON `
           -DBRIDGE_BUILD_FHIR=OFF `
-          -DCMAKE_C_COMPILER=cl `
-          -DCMAKE_CXX_COMPILER=cl `
           -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" `
           -DVCPKG_MANIFEST_MODE=OFF
 
